# tdt4205-compiler-construction

./: .gitignore  CMakeLists.txt  Makefile
src/: emit.h  generator.c  graphviz_output.c  nodetypes.h  parser.y  scanner.l  symbol_table.c  symbol_table.h  symbols.c  symbols.h  tree.c  tree.h  vslc.c  vslc.h
vsl_programs/: Makefile  codegen-tester.py
vsl_programs/ps2-parser/: arrays.vsl  if.vsl  operators.vsl  simple-assignment.vsl  simple-functions.vsl  simple-hello.vsl  variables.vsl  while.vsl
vsl_programs/ps2-parser/expected/: arrays.ast  if.ast  operators.ast  simple-assignment.ast  simple-functions.ast  simple-hello.ast  variables.ast  while.ast
vsl_programs/ps3-simplify/: simple-constant-fold.vsl  simple-if-fold.vsl  simple-unreachable.vsl  simple-while-fold.vsl  unreachable.vsl
vsl_programs/ps3-simplify/expected/: simple-constant-fold.ast  simple-if-fold.ast  simple-unreachable.ast  simple-while-fold.ast  unreachable.ast
vsl_programs/ps4-symbols/: locals.vsl  shadowing.vsl  simple-globals.vsl  simple-locals.vsl  simple-strings.vsl  strings.vsl
vsl_programs/ps4-symbols/expected/: locals.symbols  shadowing.symbols  simple-globals.symbols  simple-locals.symbols  simple-strings.symbols  strings.symbols
vsl_programs/ps5-codegen1/: arrays.vsl  callframes.vsl  comparisons.vsl  everything.vsl  globals.vsl  locals.vsl  many-params.vsl  math.vsl  simple-array.vsl  simple-call.vsl  simple-locals.vsl  simple-parameters.vsl  simple-print.vsl
vsl_programs/ps6-codegen2/: all_if_types.vsl  break.vsl  find.vsl  if.vsl  sieve.vsl  simple_break.vsl  simple_if.vsl  simple_while.vsl  while.vsl
